--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -572,6 +572,7 @@ body{
 }
 
 .terapyInformations{
+    height: 400px;
     width: 314px;
     border-radius: 10px 10px 0px 0px;
     background: $fontColorPale;
@@ -760,10 +761,10 @@ body{
             }
         }
         .advantageImg{
-            box-shadow: -2px 2px 10px rgba(128, 128, 128, 0.418);
-            border-radius: 10px;
             animation: topToBottom 1.5s;
             img {
+                border-radius: 10px;
+                box-shadow: -2px 2px 10px rgba(128, 128, 128, 0.418);
                 @include device(650) {
                     width: 300px;
                     
@@ -1056,95 +1057,53 @@ body{
         }
     }
 }
-.posts {
+
+.posts{
     display: flex;
+    gap: 20px;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 62px;
-    margin: 65px 0;
-    animation: topToBottom 1.5s;
-}
-
-.post {
-    width: 300px;
-    height: 363px;
-    position: relative;
-    border-radius: 10px 10px 0 0;
-    cursor: pointer;
-    margin-bottom: 40px;
-    &:hover {
-        scale: 105%;
-        transition: .2s;
-    }
-    .imagePost {
-        img {
-            width: 300px;
-            height: 363px;
-            border-radius: 10px 10px 0 0;
-            filter: brightness(0.5);
-        }
-        .postInformations {
-            .datePost {
-                position: absolute;
-                top: 15px;
-                left: 15px;
-                height: 69px;
-                width: 69px;
-                background: $mainColor;
-                border-radius: 10px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                p {
-                    @include paragraph;
-                    color: $fontColorPale;
-                }
-            }
-            .postSubtitle {
-                text-align: center;
-                position: absolute;
-                bottom: 14px;
-                p {
-                    @include modalText;
-                    color: $fontColorPale;
-                    text-shadow: 2px 2px 10px black;
-                }
-            }
-        }
-    }
-    .instagramLearnMore {
-        background: $mainColor;
-        padding: 14px 20px;
+   
+    .post{
         display: flex;
+        flex-direction: column;
         align-items: center;
-        gap: 3px;
-        border-radius: 0 0 10px 10px;
-        margin-top: -10px;
-        p {
-            @include aboutMetext;
-            color: $fontColorPale
+        width: 320px;
+        
+        img{
+            border-radius: 10px 10px 0 0;
         }
-    }
-    &:hover {
-        scale: 105%;
-        transition: .2s;
-        .instagramLearnMore {
-            background: $hoverColor;
-            transition: .2s;
+        .youtubeInformations{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 260px;
+            gap: 8px;
+            text-align: start;
+            background-color: #D4D4D4;
+            border-radius: 0 0 10px 10px;
+            padding: 12px;
+            font-family: lexend400;
+            h4{
+                color: #241916;
+                font-family: lexend700;
+            }
+            a{
+                background-color: #F02849;
+                color: $fontColorPale;
+                font-size:16px;
+                padding: 10px 18px;
+                border-radius: 10px;
+                margin-top: 15px;
+                cursor: pointer;
+            }
+            a:hover{
+                background-color: #D01837;
+                transition: .3s;
+            }
         }
-        .postInformations .datePost {
-            background: $hoverColor;
-            transition: .2s;
-        }
-        img {
-            filter: brightness(1);
-            transition: .2s;
-        }
+        
     }
 }
-
 
 /*---------pt11----------*/
 
@@ -1321,7 +1280,6 @@ footer {
         scale: 105%;
         opacity: 100%;
     }
-    
 }
 
 [data-anime="scroll"] {
